# simmons

./: README.md  create_container.sh  start_container.sh
cloud_processing/: CMakeLists.txt
cloud_processing/src/: cloud_filter.cpp
drive_dynamixel/drive_dynamixel/: dynamixel_controller.py  test.py
latest_src/cloud_processing/: CMakeLists.txt
latest_src/cloud_processing/src/: cloud_filter.cpp  main.cpp
latest_src/image_processing/: CMakeLists.txt
latest_src/qt6_gui/: CMakeLists.txt
latest_src/qt6_gui/include/: mainwindow.h  qnode.h
latest_src/qt6_gui/src/: mainwindow.cpp  qnode.cpp
latest_src/result_msgs/: CMakeLists.txt
qt5_ros_gui_package/include/: qnode.h
qt5_ros_gui_package/src/: mainwindow.cpp
qt5_ros_gui_package/ui/: mainwindow.ui
qt6_gui/: package.xml
qt6_gui/src/: qnode.cpp
qt6_gui/ui/: mainwindow.ui
realsense-ros/realsense2_camera/config/: config.yaml
result_msgs/: CMakeLists.txt  package.xml
src/: start_realsense_camera.sh  start_yolov8.sh
src/cloud_processing/: package.xml
src/drive_dynamixel/: package.xml  setup.cfg  setup.py
src/drive_dynamixel/drive_dynamixel/: dynamixel_controller.py  test_pub.py  test_sub.py
src/image_processing/: CMakeLists.txt  package.xml
src/image_processing/src/: main.cpp
src/pkg_launch/: CMakeLists.txt  package.xml
src/pkg_launch/launch/: start_program_launch.py
src/qt6_gui/: CMakeLists.txt  package.xml
src/qt6_gui/include/: mainwindow.h  qnode.h
src/qt6_gui/src/: main.cpp  mainwindow.cpp  qnode.cpp
src/qt6_gui/ui/: mainwindow.ui
src/realsense-ros/realsense2_camera/config/: config.yaml
src/result_msgs/: CMakeLists.txt
src/result_msgs/msg/: Bbox.msg  Person.msg
src/serial_cm/: CMakeLists.txt  package.xml
src/serial_cm/src/: main.cpp
src/udp_cm/: package.xml  setup.cfg  setup.py
src/udp_cm/udp_cm/: test_client.py  test_server.py  udp_cm.py
src/yolov8_ros/yolov8_bringup/launch/: yolov8.launch.py
src/yolov8_ros/yolov8_ros/yolov8_ros/: debug_node.py
yolov8_ros/yolov8_ros/: package.xml
yolov8_ros/yolov8_ros/yolov8_ros/: debug_node.py
